--- a/Proyecto.html
+++ b/Proyecto.html
@@ -15,8 +15,8 @@
     <div class="container-fluid">
         <div class="row mt-3">
             <div class="d-flex col-12 flex-column align-items-start">
-                <h2>Bienvenidos</h2>
-                <h2>Te vamos a ayudar a armar la lista para ir al supermercado</h2>
+                <h2>Bienvenido/a!</h2>
+                <h2>Te vamos a ayudar a armar la lista para ir al supermercado :D</h2>
             </div>
         </div>
     </div>
@@ -29,16 +29,22 @@
 
             <div class="col-6">
                 <label for="name">Nombre</label>
-                <input type="text" name="name">
+                <input type="text" id="nombre_usuario">
+
             </div>
+
 
             <div class="col-6">
                 <label for="phone">phone</label>
-                <input type="number" name="phone">
-            </div>
+                <input type="number" id="telefono_usuario">
+                <button onclick="saludar()">Enviar</button>
 
+            </div>
         </div>
+
     </div>
+    <div id="mensaje"></div>
+    <br>
 
 
     <!--Estos son los selectores de elemmentos-->
@@ -47,22 +53,24 @@
         <div class="d-flex col-12 justify-content-around">
             <div class="d-flex col-5 flex-column">
                 <div class="btn-group dropright mt-1">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_verduras"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Verduras
                     </button>
-                    <div class="dropdown-menu">
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="lista_verduras" id="dropdown_verduras">
+
+                    </ul>
                 </div>
 
 
                 <div class="btn-group dropright mt-1">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_frutas"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Frutas
                     </button>
-                    <div class="dropdown-menu">
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="lista_frutas" id="dropdown_frutas">
+
+                    </ul>
                 </div>
 
             </div>
@@ -70,21 +78,23 @@
 
             <div class="d-flex col-5 flex-column">
                 <div class="btn-group dropright mt-1">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_almacen"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Almacen
                     </button>
-                    <div class="dropdown-menu">
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="lista_almacen" id="dropdown_almacen">
+
+                    </ul>
                 </div>
 
                 <div class="btn-group dropright mt-1">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_bebidas"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Bebidas
                     </button>
-                    <div class="dropdown-menu">
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="lista_bebidas" id="dropdown_bebidas">
+
+                    </ul>
                 </div>
             </div>
 
@@ -96,22 +106,24 @@
         <div class="d-flex col-12 justify-content-around">
             <div class="d-flex col-5 flex-column">
                 <div class="btn-group dropright mt-1">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_limpieza"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Limpieza
                     </button>
-                    <div class="dropdown-menu">
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="lista_limpieza" id="dropdown_limpieza">
+
+                    </ul>
                 </div>
 
 
                 <div class="btn-group dropright mt-1">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_baño"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Baño
                     </button>
-                    <div class="dropdown-menu">
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="lista_baño" id="dropdown_baño">
+
+                    </ul>
                 </div>
 
             </div>
@@ -119,21 +131,23 @@
 
             <div class="d-flex col-5 flex-column">
                 <div class="btn-group dropright mt-1">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_lacteos"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Lacteos
                     </button>
-                    <div class="dropdown-menu">
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="lista_lacteos" id="dropdown_lacteos">
+
+                    </ul>
                 </div>
 
                 <div class="btn-group dropright mt-1">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_carnes"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Carnes
                     </button>
-                    <div class="dropdown-menu">
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="lista_carnes" id="dropdown_carnes">
+
+                    </ul>
                 </div>
             </div>
 
@@ -144,6 +158,7 @@
     <div class="form-floating mt-2">
         <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
         <label for="floatingTextarea">Aqui se guardaran tus elecciones</label>
+
     </div>
 
 
@@ -161,13 +176,13 @@
 
 
 
-<script src="Proyecto.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
-    integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
-    integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
-    crossorigin="anonymous"></script>
+    <script src="Proyecto.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
