--- a/Proyecto.html
+++ b/Proyecto.html
@@ -14,9 +14,9 @@
 
     <div class="container-fluid">
         <div class="row mt-3">
-            <div class="d-flex col-12 flex-column align-items-start">
-                <h2>Bienvenido/a!</h2>
-                <h2>Te vamos a ayudar a armar la lista para ir al supermercado :D</h2>
+            <div class="d-flex col-12 flex-column align-items-start" >
+                <h2 class="bienvenida">Bienvenido/a!</h2>
+                <h2 class="bienvenida">Te vamos a ayudar a armar la lista para ir al supermercado :D</h2>
             </div>
         </div>
     </div>
@@ -35,15 +35,18 @@
 
 
             <div class="col-6">
-                <label for="phone">phone</label>
+                <label for="phone">Telefono</label>
                 <input type="number" id="telefono_usuario">
                 <button onclick="saludar()">Enviar</button>
 
             </div>
         </div>
 
-        <div class="col-12 d-flex justify-content-center align-items-center mt-5">
+        <div class="col-12 d-flex justify-content-center align-items-center mt-5" style="position: relative;">
+            Buscar Producto 
             <input type="search" id="search" placeholder="Nombre del producto..." onchange="buscarProductos(event)"> 
+            <ul class="search_container" id="search_container">
+            </ul>
         </div>
 
     </div>
@@ -57,7 +60,7 @@
         <div class="d-flex col-12 justify-content-around">
             <div class="d-flex col-5 flex-column">
                 <div class="btn-group dropright mt-1">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_verduras"
+                    <button class="btn btn-success dropdown-toggle" type="button" id="lista_verduras"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Verduras
                     </button>
@@ -68,7 +71,7 @@
 
 
                 <div class="btn-group dropright mt-1">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_frutas"
+                    <button class="btn btn-danger dropdown-toggle" type="button" id="lista_frutas"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Frutas
                     </button>
@@ -82,7 +85,7 @@
 
             <div class="d-flex col-5 flex-column">
                 <div class="btn-group dropright mt-1">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_almacen"
+                    <button class="btn btn-success dropdown-toggle" type="button" id="lista_almacen"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Almacen
                     </button>
@@ -92,7 +95,7 @@
                 </div>
 
                 <div class="btn-group dropright mt-1">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_bebidas"
+                    <button class="btn btn-danger dropdown-toggle" type="button" id="lista_bebidas"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Bebidas
                     </button>
@@ -110,7 +113,7 @@
         <div class="d-flex col-12 justify-content-around">
             <div class="d-flex col-5 flex-column">
                 <div class="btn-group dropright mt-1">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_limpieza"
+                    <button class="btn btn-info dropdown-toggle" type="button" id="lista_limpieza"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Limpieza
                     </button>
@@ -121,7 +124,7 @@
 
 
                 <div class="btn-group dropright mt-1">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_baño"
+                    <button class="btn btn-warning dropdown-toggle" type="button" id="lista_baño"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Baño
                     </button>
@@ -135,7 +138,7 @@
 
             <div class="d-flex col-5 flex-column">
                 <div class="btn-group dropright mt-1">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_lacteos"
+                    <button class="btn btn-info dropdown-toggle" type="button" id="lista_lacteos"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Lacteos
                     </button>
@@ -145,7 +148,7 @@
                 </div>
 
                 <div class="btn-group dropright mt-1">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="lista_carnes"
+                    <button class="btn btn-warning dropdown-toggle" type="button" id="lista_carnes"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Carnes
                     </button>
@@ -160,20 +163,20 @@
 
     <!-- acumulador de items-->
     <div class="form-floating mt-2">
-        <textarea class="form-control" placeholder="Leave a comment here" id="listaTextArea"></textarea>
+        <textarea class="form-control" placeholder="Leave a comment here" id="listaTextArea" style="height: 100px;" ></textarea>
         <label for="listaTextArea">Aqui se guardaran tus elecciones</label>
 
     </div>
 
 
-    <div class="form-floating mt-2">
-        <textarea class="form-control" placeholder="Leave a comment here" id="precioTextarea"></textarea>
+    <div class="form-floating mt-2" style="max-width: 350px;">
+        <textarea class="form-control" placeholder="Leave a comment here" id="precioTextarea" style="height: 70px;"></textarea>
         <label for="precioTextarea">El valor estimado de tu compra es de..</label>
     </div>
 
 
     <div>
-        <button type="submit" class="btn btn-primary mt-1">Enviar</button>
+        <button type="submit" class="btn btn-primary mt-1" onclick="enviar()" id="send">Enviar</button>
     </div>
 
 
